<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/ghost_white"
    tools:context=".MainActivity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

        <EditText
            android:id="@+id/title_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/message_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/message"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/setn_btn"
            android:layout_width="250dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:text="@string/New_Alert" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/callbtn"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/call_authorities" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/about"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:text="@string/About" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="171dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/App_logo"
            android:src="@mipmap/pic1_foreground" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/red"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

